--- a/.github/workflows/build-openwrt-rax3000m-nand.yml
+++ b/.github/workflows/build-openwrt-rax3000m-nand.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt
+name: Build OpenWrt Rax3000m Nand
 
 on:
   repository_dispatch:
