--- a/.github/workflows/build-openwrt-cm520.yml
+++ b/.github/workflows/build-openwrt-cm520.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt
+name: Build OpenWrt CM520
 
 on:
   repository_dispatch:
