--- a/.github/workflows/delete-workflow-runs.yml
+++ b/.github/workflows/delete-workflow-runs.yml
@@ -15,5 +15,6 @@ jobs:
       - name: Delete workflow runs
         uses: Fitz77777/delete-workflow-runs@main
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           retain_days: 1
           keep_minimum_runs: 3
