--- a/.github/workflows/delete-workflow-runs.yml
+++ b/.github/workflows/delete-workflow-runs.yml
@@ -16,7 +16,7 @@ jobs:
       contents: read
     steps:
       - name: Delete workflow runs
-        uses: Mattraks/delete-workflow-runs@v2
+        uses: Fitz77777/delete-workflow-runs@main
         with:
           retain_days: 1
           keep_minimum_runs: 3
