--- a/.github/workflows/build-openwrt-rax3000m-nand.yml
+++ b/.github/workflows/build-openwrt-rax3000m-nand.yml
@@ -36,7 +36,10 @@ env:
 jobs:
   build:
     runs-on: ubuntu-20.04
-
+    permissions:
+          actions: write
+          contents: read
+          
     steps:
     - name: Checkout
       uses: actions/checkout@main
