--- a/rax3000m-nand-main.config
+++ b/rax3000m-nand-main.config
@@ -2647,7 +2647,7 @@ CONFIG_PACKAGE_htop=y
 #
 # CPE
 #
-# CONFIG_PACKAGE_sendat is not set
+CONFIG_PACKAGE_sendat=y
 # end of CPE
 # end of Daocaoren
 
