--- a/.github/workflows/build-openwrt-rax3000m-nand-main.yml
+++ b/.github/workflows/build-openwrt-rax3000m-nand-main.yml
@@ -96,6 +96,7 @@ jobs:
       id: package
       run: |
         cd openwrt
+        cat patched 
         make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
