--- a/rax3000m-nand-main.config
+++ b/rax3000m-nand-main.config
@@ -5769,9 +5769,9 @@ CONFIG_PACKAGE_luci-app-ksmbd=m
 # CONFIG_PACKAGE_luci-app-minidlna is not set
 # CONFIG_PACKAGE_luci-app-minieap is not set
 # CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
-CONFIG_PACKAGE_luci-app-mmconfig=y
+# CONFIG_PACKAGE_luci-app-mmconfig is not set
 CONFIG_PACKAGE_luci-app-modem=y
-CONFIG_PACKAGE_luci-app-modeminfo=y
+# CONFIG_PACKAGE_luci-app-modeminfo is not set
 # CONFIG_PACKAGE_luci-app-msd_lite is not set
 CONFIG_PACKAGE_luci-app-mtk=y
 # CONFIG_PACKAGE_luci-app-music-remote-center is not set
@@ -7268,16 +7268,16 @@ CONFIG_PACKAGE_atinout=y
 # CONFIG_PACKAGE_hl-atcmd is not set
 # CONFIG_PACKAGE_kamailio is not set
 # CONFIG_PACKAGE_miax is not set
-CONFIG_PACKAGE_modeminfo=y
-CONFIG_PACKAGE_modeminfo-qmi=y
+# CONFIG_PACKAGE_modeminfo is not set
+# CONFIG_PACKAGE_modeminfo-qmi is not set
 # CONFIG_PACKAGE_modeminfo-serial-dell is not set
 # CONFIG_PACKAGE_modeminfo-serial-fibocom is not set
-CONFIG_PACKAGE_modeminfo-serial-fm350=y
+# CONFIG_PACKAGE_modeminfo-serial-fm350 is not set
 # CONFIG_PACKAGE_modeminfo-serial-gosun is not set
 # CONFIG_PACKAGE_modeminfo-serial-huawei is not set
 # CONFIG_PACKAGE_modeminfo-serial-meig is not set
 # CONFIG_PACKAGE_modeminfo-serial-mikrotik is not set
-CONFIG_PACKAGE_modeminfo-serial-quectel=y
+# CONFIG_PACKAGE_modeminfo-serial-quectel is not set
 # CONFIG_PACKAGE_modeminfo-serial-sierra is not set
 # CONFIG_PACKAGE_modeminfo-serial-simcom is not set
 # CONFIG_PACKAGE_modeminfo-serial-simcom-a7xxx is not set
@@ -7287,7 +7287,7 @@ CONFIG_PACKAGE_modeminfo-serial-quectel=y
 # CONFIG_PACKAGE_modeminfo-serial-xmm is not set
 # CONFIG_PACKAGE_modeminfo-serial-yuge is not set
 # CONFIG_PACKAGE_modeminfo-serial-zte is not set
-CONFIG_PACKAGE_modeminfo-telegram=y
+# CONFIG_PACKAGE_modeminfo-telegram is not set
 # CONFIG_PACKAGE_pcapsipdump is not set
 # CONFIG_PACKAGE_restund is not set
 # CONFIG_PACKAGE_rtpengine is not set
