--- a/rax3000m-nand-main.config
+++ b/rax3000m-nand-main.config
@@ -2709,7 +2709,7 @@ CONFIG_PACKAGE_autocore-arm=y
 CONFIG_PACKAGE_automount=m
 # CONFIG_PACKAGE_autosamba is not set
 # CONFIG_PACKAGE_cellled is not set
-CONFIG_PACKAGE_fm350-modem=y
+# CONFIG_PACKAGE_fm350-modem is not set
 CONFIG_PACKAGE_ipv6helper=y
 # CONFIG_PACKAGE_jose is not set
 CONFIG_PACKAGE_libiwinfo-data=y
@@ -5973,7 +5973,7 @@ CONFIG_PACKAGE_luci-theme-bootstrap-mod=y
 #
 # CONFIG_PACKAGE_luci-proto-3g is not set
 # CONFIG_PACKAGE_luci-proto-bonding is not set
-CONFIG_PACKAGE_luci-proto-fm350=y
+# CONFIG_PACKAGE_luci-proto-fm350 is not set
 # CONFIG_PACKAGE_luci-proto-gre is not set
 # CONFIG_PACKAGE_luci-proto-hnet is not set
 # CONFIG_PACKAGE_luci-proto-ipip is not set
