--- a/.github/workflows/build-openwrt-rax3000m-nand-main-own.yml
+++ b/.github/workflows/build-openwrt-rax3000m-nand-main-own.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt Rax3000m Nand Main
+name: Build OpenWrt Rax3000m Nand Main Own Patched
 
 on:
   repository_dispatch:
