--- a/rax3000m-nand-main.config
+++ b/rax3000m-nand-main.config
@@ -5773,7 +5773,8 @@ CONFIG_PACKAGE_luci-app-ksmbd=m
 CONFIG_PACKAGE_luci-app-modem=y
 # CONFIG_PACKAGE_luci-app-modeminfo is not set
 # CONFIG_PACKAGE_luci-app-msd_lite is not set
-CONFIG_PACKAGE_luci-app-mtk=y
+# CONFIG_PACKAGE_luci-app-mtk is not set
+CONFIG_PACKAGE_luci-app-mtwifi-cfg=y
 # CONFIG_PACKAGE_luci-app-music-remote-center is not set
 # CONFIG_PACKAGE_luci-app-mwan3 is not set
 # CONFIG_PACKAGE_luci-app-mwan3helper is not set
@@ -6227,8 +6228,9 @@ CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ksmbd-tr is not set
 # CONFIG_PACKAGE_luci-i18n-ksmbd-uk is not set
 # CONFIG_PACKAGE_luci-i18n-ksmbd-vi is not set
-CONFIG_PACKAGE_luci-i18n-ksmbd-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-ksmbd-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ksmbd-zh-tw is not set
+CONFIG_PACKAGE_luci-i18n-mtwifi-cfg-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-modem-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mmconfig-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-modeminfo-zh-cn=y
@@ -6400,6 +6402,7 @@ CONFIG_PACKAGE_datconf-lua=y
 CONFIG_PACKAGE_mii_mgr=y
 # CONFIG_PACKAGE_mtk-smp is not set
 CONFIG_PACKAGE_mtkhqos_util=y
+CONFIG_PACKAGE_mtwifi-cfg=y
 CONFIG_PACKAGE_regs=y
 CONFIG_PACKAGE_switch=y
 # end of Applications
